# CloudBank

./: Cargo.toml  README.md  RustAPI.postman_collection.json  bankapi24.apib
Frontend/: package.json
Frontend/src/pages/: deposit.js  history.js  index.js  menu.js  register.js  transfer.js  withdraw.js
Frontend/src/styles/: Home.module.css  globals.css
Ref/: addmoney_handler.rs  deletemoney_handler.rs  deletemoney_routes.rs  editmoney_handler.rs  editmoney_routes.rs  main.rs  mod (1).rs  mod (2).rs  mod.rs  money_handler.rs  money_routes.rs  moneylist.rs  profilemoney_handler.rs  profilemoney_routes.rs  todaymoney_handler.rs  todaymoney_routes.rs
Webbank-Webserver/: Cargo.toml
Webbank-Webserver/src/: main.rs
Webbank-Webserver/src/handlers/: delete_history_handler.rs  mod.rs  withdraw_handler.rs
Webbank-Webserver/src/models/: bank.rs
Webbank-Webserver/src/routes/: account_routes.rs  delete_history_routes.rs  deposit_routes.rs  mod.rs  transfer_routes.rs  withdraw_routes.rs
src/: main.rs
src/handlers/: account_handler.rs  change_name_handler.rs  delete_history_handler.rs  deposit_handler.rs  mod.rs  transfer_handler.rs  withdraw_handler.rs
src/models/: bank.rs  mod.rs
src/routes/: account_routes.rs  change_name_routes.rs  delete_history_routes.rs  deposit_routes.rs  mod.rs  transfer_routes.rs  withdraw_routes.rs
