[package]
name = "bankapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
actix-cors = "0.6.4"
env_logger = "0.10.0"
log = "0.4.17"
serde = {version="1.0.154", features=["derive"]}
serde_json = "1.0.94"
sql = "0.4.3"
http = "0.2"
chrono = "0.4"
